--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
             </div>
         </div>
     </div>
-    <script src="/My js project/project-1(weather app)/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
